--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,9 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_swiper: ^1.1.6
   http: ^0.12.0+1
-  flutter_webview_plugin: ^0.3.4
+  flutter_webview_plugin: ^0.2.0
+  flutter_staggered_grid_view: ^0.2.7
+  underline_indicator: ^0.0.2
 
 dev_dependencies:
   flutter_test:
